<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            	  <TextView
            	android:id="@+id/textView21"
            	android:layout_width="100dp"
            	android:layout_height="wrap_content"
            	android:textSize="20sp"
            	android:text="@string/Date"/>
            
            	  <TextView
            	android:id="@+id/textView22"
            	android:layout_width="100dp"
            	android:layout_height="wrap_content"
            	android:textSize="20sp"
            	android:text="@string/Nom"/>
            	  
            	  <TextView
            	android:id="@+id/textView23"
            	android:layout_width="100dp"
            	android:layout_height="wrap_content"
            	android:textSize="20sp"
            	android:text="@string/Prix"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            	  
            
            	  <TextView
            	android:id="@+id/textView24"
            	android:layout_width="100dp"
            	android:layout_height="wrap_content"
            	android:textSize="20sp"
            	android:text="1"/>
            
            	  <TextView
            	android:id="@+id/textView25"
            	android:layout_width="100dp"
            	android:layout_height="wrap_content"
            	android:textSize="20sp"
            	android:text="2"/>
            	  
            	  <TextView
            	android:id="@+id/textView26"
            	android:layout_width="100dp"
            	android:layout_height="wrap_content"
            	android:textSize="20sp"
            	android:text="3"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            	  
            
            	  <TextView
            	android:id="@+id/textView27"
            	android:layout_width="100dp"
            	android:layout_height="wrap_content"
            	android:textSize="20sp"
            	android:text="4"/>
            
            	  <TextView
            	android:id="@+id/textView28"
            	android:layout_width="100dp"
            	android:layout_height="wrap_content"
            	android:textSize="20sp"
            	android:text="5"/>
            	  
            	  <TextView
            	android:id="@+id/textView29"
            	android:layout_width="100dp"
            	android:layout_height="wrap_content"
            	android:textSize="20sp"
            	android:text="6"/>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


    </TableLayout>

</LinearLayout>
